added all code, fixed codebase

--- a/Laplacian_Eigenmaps.ipynb
+++ b/Laplacian_Eigenmaps.ipynb
@@ -1,11 +1,20 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Laplacian Eigenmaps"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import the relevant libraries\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn import manifold,cluster\n",
@@ -51,8 +60,10 @@
     }
    ],
    "source": [
+    "# read in the data in\n",
     "credit_data =pd.read_csv('CC_GENERAL.csv')\n",
     "data_matrix = credit_data.drop(\"CUST_ID\" ,axis= 1).to_numpy()\n",
+    "# extract basic information of the dataset\n",
     "credit_data.info()"
    ]
   },
@@ -73,7 +84,9 @@
     }
    ],
    "source": [
+    "# implmenet spectral embedding with 2 components\n",
     "embedding = manifold.SpectralEmbedding(n_components=2)\n",
+    "# transform the original data given the embeddings\n",
     "x_trans = embedding.fit_transform(data_matrix)\n",
     "x,y = x_trans.T\n",
     "plt.scatter(x,y);"
@@ -137,6 +150,7 @@
    ],
    "source": [
     "plt.figure()\n",
+    "# define a vector of colors\n",
     "colors = cm.rainbow(np.linspace(0, 1, 4))\n",
     "list1 = []\n",
     "list2 = []\n",
@@ -156,6 +170,7 @@
     "array3 = np.array(list3).T\n",
     "array4 = np.array(list4).T\n",
     "\n",
+    "# plot each cluster \n",
     "plt.scatter(array1[0], array1[1], color=colors[0])\n",
     "plt.scatter(array2[0], array2[1], color=colors[1])\n",
     "plt.scatter(array3[0], array3[1], color=colors[2])\n",
@@ -255,6 +270,7 @@
     }
    ],
    "source": [
+    "# read in the loan dataset\n",
     "loan_data = pd.read_csv('loan_cleaned.csv')\n",
     "data_matrix = loan_data.to_numpy()\n",
     "true_label = loan_data['Yes'].to_list()\n",
